Addition of Microsoft PowerToys to Toolset section

--- a/sites/toolset.mdx
+++ b/sites/toolset.mdx
@@ -74,3 +74,5 @@ Apart from the above main areas, I also love some smaller apps that make my life
 4. [Mailplane](https://mailplaneapp.com/) - if you use Gmail and have a Mac, this app is a must.
 5. [PDF Expert](https://pdfexpert.com/) is the best PDF app you can have.
 6. For tasks and notes, after testing multiple options, I stuck with Apple Notes and Reminders.
+
+For Windows, there is one must-have power user tool: [Microsoft PowerToys](https://github.com/microsoft/PowerToys). Make your day-to-day Windows life better.
