Update to Features on Demand

--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -124,6 +124,7 @@ Data Extract Types | Adds various Data Extract Activity options in Automation St
 Custom Data Extract Types | If the Standard On-Demand Data Extract Types are not enough, you can request creating a custom one to suit your needs. | N/A | Paid
 Salesforce Objects & Reports Import | If you are using Marketing Cloud Connect, you can ask Support to enable additional Import Activity Type to pull Objects and Reports to Salesforce Data Extensions folder. | [Import Activity](https://help.salesforce.com/articleView?id=sf.mc_es_create_an_import_activity.htm&type=5) | Free
 Additional Automation Activities | You can ask Support to enable a few additional Automation Activities focused on Journey Builder and Salesforce integration. | [On-Demand Activities](https://help.salesforce.com/articleView?id=sf.mc_as_automation_studio_activities_reference.htm&type=5) | ?
+Allow Blank File Processing | By default, if your import activity encounters blank file, it will error out. This Business Rule allows it to continue the processing as normal. | N/A | Free
 
 ## Contact Builder Features
 
