Typo fix thanks to Maxime

--- a/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
+++ b/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
@@ -32,7 +32,7 @@ My favourite way to debug email sends is by using a SQL Query. Open your [Query 
 SELECT
       s.SubscriberKey     AS SubscriberKey
     , sub.EmailAddress    AS EmailAddress
-    , sub.Status          AS SubscribtionStatus
+    , sub.Status          AS SubscriptionStatus
     , j.JourneyName       AS JourneyName
     , j.VersionNumber     AS JourneyVersion
     , job.EmailName       AS EmailName
