Update of SSJS Template and doc linking

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -38,6 +38,7 @@ SSJS is an XX-century-version of JavaScript paired with proprietary libraries cr
 
 - [AMPScript in SSJS](./ssjs/ssjs-snippet-ampscript-in-ssjs.mdx)
 - [MobileConnect Phone Change](./ssjs/ssjs-snippet-mobileconnect-phone-change.mdx)
+- [SSJS Script Template](./ssjs/ssjs-snippet-ssjs-script-template.mdx)
 
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/ssjs/ssjs-if-and-switch">Read about SSJS</a>
 
