Small content fix

--- a/sites/toolset.mdx
+++ b/sites/toolset.mdx
@@ -62,7 +62,7 @@ I'm not a graphic designer. I need something that is simple, fast and can output
 
 ### Productivity
 
-Apart from the above main areas, I also love some smaller apps that make my life better (unfortunately, all Mac only):
+Apart from the above main areas, I also love some smaller apps that make my life better (unfortunately, all but the last one are Mac only):
 
 1. [Alfred](https://www.alfredapp.com/) is one of the best ways to keep your hands on the keyboard all the time. And there are tons of extensions (called workflows) that make it even better. Some of my favourite:
     - [Convert](https://github.com/deanishe/alfred-convert) for google-like quick conversion of various units.
