Initial structure draft of Aggregate functions article along with linking

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -86,6 +86,7 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 - [Date Functions](./sql/sfmc-sql-date-functions.mdx)
 - [Numeric Functions](./sql/sfmc-sql-numeric-functions.mdx)
 - [Conversion Functions](./sql/sfmc-sql-conversion-functions.mdx)
+- [Aggregate Functions](./sql/sfmc-sql-aggregate-functions.mdx)
 - [Style Guide](./sql/sfmc-sql-style-guide.mdx)
 
 ### SQL Snippets
