--- a/docs/ssjs/debugging-ssjs.mdx
+++ b/docs/ssjs/debugging-ssjs.mdx
@@ -340,11 +340,11 @@ Here you can find a sample setup:
 
 Column Name | Primary Key | Length | Type | Nullable | Default Value
 -- | -- | --  | -- | -- | --
-id | Yes | 50 | Text | No |
-errorSource | | 100 | Text | No |
-errorMessage | | 2000 | Text | Yes |
-errorDescription | | 2000 | Text | Yes |
-errorDate | | | Date | Yes | Current Date
+ID | Yes | 36 | Text | No |
+ErrorSource | | 100 | Text | No |
+ErrorMessage | | 2000 | Text | Yes |
+ErrorDescription | | 2000 | Text | Yes |
+ErrorDate | | | Date | Yes | Current Date
 
 If you have multiple Business Units on your instance, add it as a Shared Data Extension.
 
@@ -401,7 +401,7 @@ You can solve it by creating a single Error Handler function and just calling it
             // Remember that if your Logging Data Extension is in Shared Folder, you need to add the "ENT." prefix to name
             Platform.Function.InsertData(
                 'Data_Extension_Name',
-                ['id', 'errorSource', 'errorMessage', 'errorDescription'],
+                ['ID', 'ErrorSource', 'ErrorMessage', 'ErrorDescription'],
                 [GUID(), 'Name of the asset where the script runs', Stringify(error.message), Stringify(error.description)]
             );
         };
